--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 @import url ('https://fonts.googleapis.com/css2? família=Bebas+Neue&display=swap');
 
+
 body {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
     background-color:black
 }
 
@@ -47,7 +49,7 @@ input {
 }
 
 
-main {
+.princ {
     display: inline-block;
 }
 
